--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="keywords" content="Jharkhand tourism, eco-tourism, tribal culture, Netarhat, Betla National Park, cultural tours, local artisans, sustainable travel" />
     <meta name="author" content="Jharkhand Tourism Department" />
     <link rel="canonical" href="https://jharkhnadtourism.com" />
+    <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Leaflet CSS & JS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
     <meta property="og:title" content="Jharkhand Tourism - Discover Eco & Cultural Heritage" />
     <meta property="og:description" content="Experience pristine forests, rich tribal culture & breathtaking landscapes. Connect with local communities through authentic eco-tourism adventures." />
