--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <div class="container mt-4">
+  <h2 class="text-center">Jharkhand Hidden Gems Explorer</h2>
+  <div id="map" style="height: 600px;"></div>
+</div>s
   </body>
 </html>
