--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Leaflet CSS & JS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="script.js"></script>
+<script src="data.js></script>
 
     <meta property="og:title" content="Jharkhand Tourism - Discover Eco & Cultural Heritage" />
     <meta property="og:description" content="Experience pristine forests, rich tribal culture & breathtaking landscapes. Connect with local communities through authentic eco-tourism adventures." />
