--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <div class="container mt-4">
   <h2 class="text-center">Jharkhand Hidden Gems Explorer</h2>
   <div id="map" style="height: 600px;"></div>
-</div>s
+</div>
   </body>
 </html>
