--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jharkhand Tourism - Discover Eco & Cultural Heritage | Official Tourism Platform</title>
-    <meta name="description" content="Explore Jharkhand's pristine forests, rich tribal culture & eco-tourism destinations. Connect with local artisans, experience authentic cultural tours & sustainable travel." />
-    <meta name="keywords" content="Jharkhand tourism, eco-tourism, tribal culture, Netarhat, Betla National Park, cultural tours, local artisans, sustainable travel" />
+    <title>Jharkhand Tourism - Discover Eco & Cultural Heritage</title>
+    <meta name="description" content="Explore Jharkhand's pristine forests, rich tribal culture & eco-tourism destinations." />
+    <meta name="keywords" content="Jharkhand tourism, eco-tourism, tribal culture, Netarhat, Betla National Park, cultural tours" />
     <meta name="author" content="Jharkhand Tourism Department" />
-    <link rel="canonical" href="https://jharkhnadtourism.com" />
+    <link rel="canonical" href="https://jharkhandtourism.com" />
+
     <!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Leaflet CSS & JS -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="script.js"></script>
-<script src="data.js></script>
-
-    <meta property="og:title" content="Jharkhand Tourism - Discover Eco & Cultural Heritage" />
-    <meta property="og:description" content="Experience pristine forests, rich tribal culture & breathtaking landscapes. Connect with local communities through authentic eco-tourism adventures." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+</head>
+<body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
     <div class="container mt-4">
-  <h2 class="text-center">Jharkhand Hidden Gems Explorer</h2>
-  <div id="map" style="height: 600px;"></div>
-</div>
-  </body>
+        <h2 class="text-center">Jharkhand Hidden Gems Explorer</h2>
+        <div id="map" style="height: 600px;"></div>
+
+        <h2 class="text-center mt-5">Emergency SOS System</h2>
+        <input id="cityInput" type="text" placeholder="Enter city/town in Jharkhand" class="form-control mb-2">
+        <button id="sosBtn" class="btn btn-danger">Get SOS Contacts</button>
+        <div id="sosResult" class="mt-3"></div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="data.js"></script>
+    <script src="script.js"></script>
+    <script src="/src/sos.js"></script>
+</body>
 </html>
