--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="data.js"></script>
-    <script src="script.js"></script>
-    <script src="/src/sos.js"></script>
+    
+    <script src="/src/SOS.js"></script>
 </body>
 </html>
