--- a/index.html
+++ b/index.html
@@ -30,6 +30,5 @@
 
     <!-- Scripts -->
     
-    <script src="/src/SOS.js"></script>
-</body>
+ <script type="module" src="src/SOS.js"></script></body>
 </html>
